<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imageUser"
                        android:layout_width="@dimen/hundred"
                        android:layout_height="@dimen/hundred"
                        android:padding="@dimen/five"
                        android:contentDescription="@string/user_name"
                        app:srcCompat="@drawable/user" />

                <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/user_name"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/repository_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repository_name"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_repository"
                        android:maxLines="5"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imageStars"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:contentDescription="@string/forks" android:padding="@dimen/five"
                            app:srcCompat="@drawable/stars" />

                    <TextView
                            android:id="@+id/stars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stars" />

                    <ImageView
                            android:id="@+id/imageForks"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:contentDescription="@string/stars" android:padding="@dimen/five"
                            app:srcCompat="@drawable/forks" />

                    <TextView
                            android:id="@+id/forks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forks" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
