<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imageLogin"
                        android:layout_width="@dimen/hundred"
                        android:layout_height="@dimen/hundred"
                        android:padding="@dimen/five"
                        android:contentDescription="@string/user_login"
                        app:srcCompat="@drawable/user" />

                <TextView
                        android:id="@+id/user_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/user_login"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_pull"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_pull"/>

                <TextView
                        android:padding="@dimen/five"
                        android:id="@+id/body_pull"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/body_pull"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
